# ReflectionPOC

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  conanfile.txt  configure.bat  crc32.ipynb
cmake/: AssignSourceGroup.cmake  CMakeConfig.cmake.in  ProjectWarnings.cmake  StringUtils.cmake
include/: refl.h
include/Serialization/: Binary.h  Crc32.h  Crc32Table.h  Dynamics.h  EndianSwapper.h  Json.h  Persistence.h  Serialization.h  SerializerBase.h  Signature.h  Stream.h  Traits.h
src/: CMakeLists.txt  Reflection.h
src/Serialization/: Archive.h  Binary.h  CMakeLists.txt  Crc32.h  Dynamics.h  EndianSwapper.h  Json.cpp  Json.h  Serialization.h  Signature.h
tests/: CMakeLists.txt  CmakeLists.txt  main.cpp  test_crc32.cpp  test_dynamics.cpp  test_persistence.cpp  test_reflection.cpp  test_serialization.cpp  test_signature.cpp
